# tasia-viewer

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  BUILD_NOTES.md  CMakeLists.txt  DECISIONS.md  Dockerfile  LICENSE  NEXT_ACTION.md  PROJECT_STATUS.md  README.md  SECRETS_POLICY.md  autobuild.xml  branding_report.json  docker-build.sh
.github/workflows/: build-legacy-linux.yml  build-legacy-windows.yml  build-linux.yml  build-macos.yml  build-tasia.yml  build-windows.yml  deploy_only.yml  release.yml  sign.yml  tag-fs-build.yml  tag-release.yaml
ci/linux/: build.sh  mirror_installables.sh  mirror_manifest.json  upload-symbols.sh
ci/linux/artifacts/: breakpad-4708e6fb-linux64_bionic-220392253.tar.bz2  discord_rpc-3.4.0-linux64-192540843.tar.bz2  dullahan-1.14.0.202403161609_118.6.8_ge44bee1_chromium-118.0.5993.117-linux64-240760509.tar.zst  fmodstudio-2.02.24-linux64-242871432.tar.bz2  glib-2.64.6.240620740-linux64-240620740.tar.zst  glod-1.0pre3.180990827-linux64-180990827.tar.bz2  gstreamer10-1.6.3.201605191852-linux-201605191852.tar.bz2  jemalloc-5.3.0-linux64-222631217.tar.bz2  libnotify-0.4.4-linux-20101003.tar.bz2  libuuid-1.6.2-linux64-180841554.tar.bz2  ndPhysicsStub-1.202321033-linux64-202321033.tar.bz2  slvoice-3.2-linux64-222532329.tar.bz2  viewer_fonts-1.0.0.242151216-common-242151216.tar.bz2  webrtc-m114_release.251141020-linux64-251141020.tar.bz2
ci/mac/: build.sh  mirror_installables.sh  mirror_manifest.json  upload-symbols.sh
ci/mac/artifacts/: discord_rpc-3.4.0-darwin64-192522358.tar.bz2  fmodstudio-2.02.24-darwin64-242921144.tar.bz2  glod-1.0pre3.171101143-darwin64-171101143.tar.bz2  gntp_growl-1.0-darwin-201505101047-r12.tar.bz2  ndPhysicsStub-1.0-darwin-202330107.tar.bz2
ci/windows/: launch.bat  mirror_installables.sh  mirror_manifest.json  run.sh
ci/windows/artifacts/: fmodstudio-2.02.23-windows64-242661809.tar.bz2
doc/: building_macos.md
indra/: CMakeLists.txt
indra/cmake/: 00-Common.cmake  Boost.cmake  BuildPackagesInfo.cmake  Copy3rdPartyLibs.cmake  EXPAT.cmake  FindAutobuild.cmake  LLAddBuildTest.cmake  LLAppearanceUtility.cmake  LLPrimitive.cmake  LLSharedLibs.cmake  LLTestCommand.cmake  Linking.cmake  MsQuic.cmake  MsQuicLocalize.cmake  Prebuilt.cmake  UI.cmake  Variables.cmake
indra/copy_win_scripts/: CMakeLists.txt
indra/doxygen/: CMakeLists.txt
indra/lib/python/indra/util/: llmanifest.py
indra/linux_crash_logger/: linux_crash_logger.cpp
indra/llaudio/: llaudiodecodemgr.cpp  llaudioengine.cpp  llaudioengine.h  llaudioengine_fmodstudio.cpp  llvorbisencode.cpp  llvorbisencode.h
indra/llcommon/: CMakeLists.txt  indra_constants.h  llapp.cpp  llcoros.cpp  llcoros.h  llerror.cpp  llfile.cpp  llformat.h  llmemory.h  llprocess.cpp  llsingleton.cpp  llstring.cpp  llstring.h  llsys.cpp  lluri.cpp  lluuid.cpp  loextras.cpp  loextras.h  lospoof.cpp  lospoof.h  loversion.h
indra/llcorehttp/: httpstats.h
indra/llcrashlogger/: llcrashlock.cpp
indra/llfilesystem/: lldir.cpp  lldir_win32.cpp  lldirguard.h  lldiriterator.cpp  lldiskcache.cpp  llfilesystem.cpp
indra/llimagej2coj/: llimagej2coj.cpp
indra/llmath/: llvolume.cpp
indra/llmessage/: CMakeLists.txt  llcircuit.cpp  llcircuit.h  llpacketring.cpp  llsdmessagereader.h  llxfermanager.cpp  message.cpp  message.h
indra/llprimitive/: llprimtexturelist.cpp
indra/llquic/: CMakeLists.txt  llquicapi.cpp  llquicapi.h  llquicconfiguration.cpp  llquicconfiguration.h  llquicconnection.cpp  llquicconnection.h  llquicglobal.cpp  llquicglobal.h  llquicregistration.cpp  llquicregistration.h  llquicstream.cpp  llquicstream.h
indra/llrender/: llrender.cpp
indra/llui/: CMakeLists.txt  llchatentry.cpp  llchatentry.h  llstatbar.cpp  lltextbase.cpp
indra/llwebrtc/: CMakeLists.txt  llwebrtc.cpp  llwebrtc_impl.h
indra/llwindow/: lldxhardware.cpp  llwindowsdl.cpp  llwindowsdl2.cpp  llwindowwin32.cpp
indra/llxml/: llcontrol.cpp
indra/media_plugins/cef/: linux_volume_catcher.cpp  media_plugin_cef.cpp
indra/newview/: CMakeLists.txt  daeexport.cpp  fs_viewer_manifest.py  fsareasearch.cpp  fsareasearch.h  fschathistory.cpp  fscommon.cpp  fscommon.h  fsdata.cpp  fsexportperms.cpp  fsfloaterexport.cpp  fsfloaterim.cpp  fsfloaterim.h  fsfloaterimport.cpp  fsfloaternearbychat.cpp  fsfloaternearbychat.h  fsgridhandler.cpp  fsgridhandler.h  fslslbridge.h  fspanellogin.cpp  fspanellogin.h  fsprimfeedauth.h  fsprimfeedconnect.h  gltfscenemanager.cpp  lfsimfeaturehandler.cpp  lggbeamcolormapfloater.cpp  lggbeammapfloater.cpp  llagent.cpp  llaisapi.cpp  llappviewer.cpp  llappviewer.h  llappviewerlinux.cpp  llappviewerwin32.cpp  llboostfilesystemcompat.cpp  llcallingcard.h  lldirpicker.cpp  lldrawpoolterrain.cpp  lleventpoll.cpp  llfilepicker.cpp  llfilepicker.h  (+137 more)
indra/newview/app_settings/: cmd_line.xml  grids.xml  settings.xml
indra/newview/fs_resources/: login.html
indra/newview/skins/default/textures/: missing_asset.tga  textures.xml
indra/newview/skins/default/xui/az/: notifications.xml  strings.xml
indra/newview/skins/default/xui/da/: strings.xml
indra/newview/skins/default/xui/de/: notifications.xml  strings.xml
indra/newview/skins/default/xui/en/: floater_about.xml  floater_fs_area_search.xml  floater_fs_im_session.xml  floater_fs_nearby_chat.xml  floater_giphy_picker.xml  floater_lo_extras.xml  floater_lo_spoof.xml  floater_preferences.xml  floater_tasiafeed.xml  menu_attachment_other.xml  menu_attachment_self.xml  menu_avatar_other.xml  menu_avatar_self.xml  (+17 more)
indra/newview/skins/starlight/textures/: textures.xml
indra/newview/skins/starlightcui/textures/: textures.xml
indra/test/: CMakeLists.txt
indra/win_crash_logger/: llcrashlookupwindows.cpp
scripts/: apply_mirror.py  configure_firestorm.sh  generate_tasia_giphy_key.py  mirror_3p_packages.py  output-cmake.sh  tasia_branding_replace.py
server/: crashraport.php
server/bugs/api/v1/: report.php
server/tasiafeed/: admin.php  config.local.example.php  config.php  db.php  index.php  owner.php  post.php
server/tasiafeed/api/v1/snapshots/: upload.php
web/youtube-player/: index.html
(+24 files in other folders)
