cmake_minimum_required(VERSION 3.16.0 FATAL_ERROR)
project(ViewerRoot)
if(NOT DEFINED ENV{AUTOBUILD} OR ENV{AUTOBUILD} STREQUAL "")
    set(ENV{AUTOBUILD} "/usr/local/bin/autobuild")
endif()
if(NOT DEFINED ENV{LL_BUILD_RELEASE} OR ENV{LL_BUILD_RELEASE} STREQUAL "")
    set(ENV{LL_BUILD_RELEASE} "-O3  -g -pipe -std=c++20 -fPIC -Wno-error=nonnull -DLL_RELEASE=1 -DLL_RELEASE_FOR_DOWNLOAD=1 -DNDEBUG -DLL_LINUX=1 -DPIC -DLL_OS_DRAGDROP_ENABLED=1")
endif()
if(NOT DEFINED ENV{LL_BUILD_RELWITHDEBINFO} OR ENV{LL_BUILD_RELWITHDEBINFO} STREQUAL "")
    set(ENV{LL_BUILD_RELWITHDEBINFO} "-O0  -g -pipe -std=c++20 -fPIC -Wno-error=nonnull -DLL_RELEASE=1 -DLL_RELEASE_WITH_DEBUG_INFO=1 -DNDEBUG -DLL_LINUX=1 -DPIC -DLL_OS_DRAGDROP_ENABLED=1")
endif()
if(NOT DEFINED ENV{LL_BUILD_DEBUG} OR ENV{LL_BUILD_DEBUG} STREQUAL "")
    set(ENV{LL_BUILD_DEBUG} "")
endif()
if(NOT DEFINED ENV{LL_BUILD} OR ENV{LL_BUILD} STREQUAL "")
    set(ENV{LL_BUILD} "-O3  -g -pipe -std=c++20 -fPIC -Wno-error=nonnull -DLL_RELEASE=1 -DLL_RELEASE_FOR_DOWNLOAD=1 -DNDEBUG -DLL_LINUX=1 -DPIC -DLL_OS_DRAGDROP_ENABLED=1")
endif()
if(NOT DEFINED ENV{revision} OR ENV{revision} STREQUAL "")
    set(ENV{revision} "78266")
endif()
if(NOT DEFINED ENV{AUTOBUILD_BUILD_ID} OR ENV{AUTOBUILD_BUILD_ID} STREQUAL "")
    set(ENV{AUTOBUILD_BUILD_ID} "261322309")
endif()
if(NOT DEFINED ENV{PKG_CONFIG_LIBDIR} OR ENV{PKG_CONFIG_LIBDIR} STREQUAL "")
    set(ENV{PKG_CONFIG_LIBDIR} "")
endif()
if(NOT DEFINED ENV{PKG_CONFIG_PATH} OR ENV{PKG_CONFIG_PATH} STREQUAL "")
    set(ENV{PKG_CONFIG_PATH} "")
endif()
if(NOT DEFINED ENV{PYTHON} OR ENV{PYTHON} STREQUAL "")
    set(ENV{PYTHON} "")
endif()
if(NOT DEFINED ENV{LL_BUILD_DARWIN_RELEASE_SWITCHES} OR ENV{LL_BUILD_DARWIN_RELEASE_SWITCHES} STREQUAL "")
    set(ENV{LL_BUILD_DARWIN_RELEASE_SWITCHES} "-O3 -g --debug -mmacosx-version-min=11 -std=c++20 -fPIC")
endif()
if(NOT DEFINED ENV{LL_BUILD_WINDOWS_BASE} OR ENV{LL_BUILD_WINDOWS_BASE} STREQUAL "")
    set(ENV{LL_BUILD_WINDOWS_BASE} "/std:c++20 /permissive- /Zc:wchar_t /Zi /GR /DEBUG /D_SECURE_STL=0 /D_HAS_ITERATOR_DEBUGGING=0 /DWIN32 /D_WINDOWS /DLL_WINDOWS=1 /DUNICODE /D_UNICODE /DWINVER=0x0601 /D_WIN32_WINNT=0x0601 /DLL_OS_DRAGDROP_ENABLED=1 /DLIB_NDOF=1")
endif()
if(NOT DEFINED ENV{AUTOBUILD_PLATFORM} OR ENV{AUTOBUILD_PLATFORM} STREQUAL "")
    set(ENV{AUTOBUILD_PLATFORM} "linux64")
endif()
if(NOT DEFINED ENV{AUTOBUILD_LOGLEVEL} OR ENV{AUTOBUILD_LOGLEVEL} STREQUAL "")
    set(ENV{AUTOBUILD_LOGLEVEL} "")
endif()
if(NOT DEFINED ENV{LL_BUILD_BASE_MACROS} OR ENV{LL_BUILD_BASE_MACROS} STREQUAL "")
    set(ENV{LL_BUILD_BASE_MACROS} "-DLL_LINUX=1 -DPIC -DLL_OS_DRAGDROP_ENABLED=1")
endif()
if(NOT DEFINED ENV{LL_BUILD_DARWIN_BASE_SWITCHES} OR ENV{LL_BUILD_DARWIN_BASE_SWITCHES} STREQUAL "")
    set(ENV{LL_BUILD_DARWIN_BASE_SWITCHES} "-g --debug -mmacosx-version-min=11 -std=c++20 -fPIC")
endif()
if(NOT DEFINED ENV{LL_BUILD_DARWIN_BASE} OR ENV{LL_BUILD_DARWIN_BASE} STREQUAL "")
    set(ENV{LL_BUILD_DARWIN_BASE} "-g --debug -mmacosx-version-min=11 -std=c++20 -fPIC -DLL_DARWIN=1 -DLIB_NDOF=1 -DPIC -DLL_OS_DRAGDROP_ENABLED=1")
endif()
if(NOT DEFINED ENV{LL_BUILD_DARWIN_RELEASE_MACROS} OR ENV{LL_BUILD_DARWIN_RELEASE_MACROS} STREQUAL "")
    set(ENV{LL_BUILD_DARWIN_RELEASE_MACROS} "-DLL_RELEASE=1 -DLL_RELEASE_FOR_DOWNLOAD=1 -DNDEBUG -DLL_DARWIN=1 -DLIB_NDOF=1 -DPIC -DLL_OS_DRAGDROP_ENABLED=1")
endif()
if(NOT DEFINED ENV{LL_BUILD_LINUX_RELEASEFS_OPEN} OR ENV{LL_BUILD_LINUX_RELEASEFS_OPEN} STREQUAL "")
    set(ENV{LL_BUILD_LINUX_RELEASEFS_OPEN} "-O3  -g -pipe -std=c++20 -fPIC -Wno-error=nonnull -DLL_RELEASE=1 -DLL_RELEASE_FOR_DOWNLOAD=1 -DNDEBUG -DLL_LINUX=1 -DPIC -DLL_OS_DRAGDROP_ENABLED=1")
endif()
if(NOT DEFINED ENV{LL_BUILD_WINDOWS_RELWITHDEBINFOFS} OR ENV{LL_BUILD_WINDOWS_RELWITHDEBINFOFS} STREQUAL "")
    set(ENV{LL_BUILD_WINDOWS_RELWITHDEBINFOFS} "/MD /Od /Ob0 /std:c++20 /permissive- /Zc:wchar_t /Zi /GR /DEBUG /DLL_RELEASE=1 /DLL_RELEASE_WITH_DEBUG_INFO=1 /DNDEBUG /D_SECURE_STL=0 /D_HAS_ITERATOR_DEBUGGING=0 /DWIN32 /D_WINDOWS /DLL_WINDOWS=1 /DUNICODE /D_UNICODE /DWINVER=0x0601 /D_WIN32_WINNT=0x0601 /DLL_OS_DRAGDROP_ENABLED=1 /DLIB_NDOF=1")
endif()
if(NOT DEFINED ENV{LL_BUILD_RELWITHDEBINFO_SWITCHES} OR ENV{LL_BUILD_RELWITHDEBINFO_SWITCHES} STREQUAL "")
    set(ENV{LL_BUILD_RELWITHDEBINFO_SWITCHES} "-O0  -g -pipe -std=c++20 -fPIC -Wno-error=nonnull")
endif()
if(NOT DEFINED ENV{AUTOBUILD_CPU_COUNT} OR ENV{AUTOBUILD_CPU_COUNT} STREQUAL "")
    set(ENV{AUTOBUILD_CPU_COUNT} "12")
endif()
if(NOT DEFINED ENV{LL_BUILD_WINDOWS_RELEASEFS} OR ENV{LL_BUILD_WINDOWS_RELEASEFS} STREQUAL "")
    set(ENV{LL_BUILD_WINDOWS_RELEASEFS} "/MD /O2 /Ob2 /std:c++20 /permissive- /Zc:wchar_t /Zi /GR /DEBUG /DLL_RELEASE=1 /DLL_RELEASE_FOR_DOWNLOAD=1 /DNDEBUG /D_SECURE_STL=0 /D_HAS_ITERATOR_DEBUGGING=0 /DWIN32 /D_WINDOWS /DLL_WINDOWS=1 /DUNICODE /D_UNICODE /DWINVER=0x0601 /D_WIN32_WINNT=0x0601 /DLL_OS_DRAGDROP_ENABLED=1 /DLIB_NDOF=1")
endif()
if(NOT DEFINED ENV{LL_BUILD_DARWIN_RELEASEFS} OR ENV{LL_BUILD_DARWIN_RELEASEFS} STREQUAL "")
    set(ENV{LL_BUILD_DARWIN_RELEASEFS} "-O3 -g --debug -mmacosx-version-min=11 -std=c++20 -fPIC -DLL_RELEASE=1 -DLL_RELEASE_FOR_DOWNLOAD=1 -DNDEBUG -DLL_DARWIN=1 -DLIB_NDOF=1 -DPIC -DLL_OS_DRAGDROP_ENABLED=1")
endif()
if(NOT DEFINED ENV{LL_BUILD_LINUX_RELWITHDEBINFOOS} OR ENV{LL_BUILD_LINUX_RELWITHDEBINFOOS} STREQUAL "")
    set(ENV{LL_BUILD_LINUX_RELWITHDEBINFOOS} "-O0  -g -pipe -std=c++20 -fPIC -Wno-error=nonnull -DLL_RELEASE=1 -DLL_RELEASE_WITH_DEBUG_INFO=1 -DNDEBUG -DLL_LINUX=1 -DPIC -DLL_OS_DRAGDROP_ENABLED=1")
endif()
if(NOT DEFINED ENV{LL_BUILD_WINDOWS_BASE_MACROS} OR ENV{LL_BUILD_WINDOWS_BASE_MACROS} STREQUAL "")
    set(ENV{LL_BUILD_WINDOWS_BASE_MACROS} "/D_SECURE_STL=0 /D_HAS_ITERATOR_DEBUGGING=0 /DWIN32 /D_WINDOWS /DLL_WINDOWS=1 /DUNICODE /D_UNICODE /DWINVER=0x0601 /D_WIN32_WINNT=0x0601 /DLL_OS_DRAGDROP_ENABLED=1 /DLIB_NDOF=1")
endif()
if(NOT DEFINED ENV{LL_BUILD_DARWIN_RELEASEFS_OPEN} OR ENV{LL_BUILD_DARWIN_RELEASEFS_OPEN} STREQUAL "")
    set(ENV{LL_BUILD_DARWIN_RELEASEFS_OPEN} "-O3 -g --debug -mmacosx-version-min=11 -std=c++20 -fPIC -DLL_RELEASE=1 -DLL_RELEASE_FOR_DOWNLOAD=1 -DNDEBUG -DLL_DARWIN=1 -DLIB_NDOF=1 -DPIC -DLL_OS_DRAGDROP_ENABLED=1")
endif()
if(NOT DEFINED ENV{AUTOBUILD_ADDRSIZE} OR ENV{AUTOBUILD_ADDRSIZE} STREQUAL "")
    set(ENV{AUTOBUILD_ADDRSIZE} "64")
endif()
if(NOT DEFINED VIEWER_CHANNEL OR VIEWER_CHANNEL STREQUAL "")
    set(VIEWER_CHANNEL "Tasia-Releasex64")
endif()
if(NOT DEFINED VIEWER_VERSION_GITHASH OR VIEWER_VERSION_GITHASH STREQUAL "")
    set(VIEWER_VERSION_GITHASH "\"c836a19aa8\"")
endif()
if(NOT DEFINED USE_FMODSTUDIO OR USE_FMODSTUDIO STREQUAL "")
    set(USE_FMODSTUDIO "OFF")
endif()
if(NOT DEFINED OPENAL OR OPENAL STREQUAL "")
    set(OPENAL "OFF")
endif()
if(NOT DEFINED USE_KDU OR USE_KDU STREQUAL "")
    set(USE_KDU "OFF")
endif()
if(NOT DEFINED OPENSIM OR OPENSIM STREQUAL "")
    set(OPENSIM "ON")
endif()
if(NOT DEFINED SINGLEGRID OR SINGLEGRID STREQUAL "")
    set(SINGLEGRID "OFF")
endif()
if(NOT DEFINED HAVOK_TPV OR HAVOK_TPV STREQUAL "")
    set(HAVOK_TPV "OFF")
endif()
if(NOT DEFINED USE_AVX_OPTIMIZATION OR USE_AVX_OPTIMIZATION STREQUAL "")
    set(USE_AVX_OPTIMIZATION "OFF")
endif()
if(NOT DEFINED USE_AVX2_OPTIMIZATION OR USE_AVX2_OPTIMIZATION STREQUAL "")
    set(USE_AVX2_OPTIMIZATION "OFF")
endif()
if(NOT DEFINED USE_TRACY OR USE_TRACY STREQUAL "")
    set(USE_TRACY "OFF")
endif()
if(NOT DEFINED TESTBUILD OR TESTBUILD STREQUAL "")
    set(TESTBUILD "OFF")
endif()
if(NOT DEFINED PACKAGE OR PACKAGE STREQUAL "")
    set(PACKAGE "ON")
endif()
if(NOT DEFINED LL_TESTS OR LL_TESTS STREQUAL "")
    set(LL_TESTS "OFF")
endif()
if(NOT DEFINED ADDRESS_SIZE OR ADDRESS_SIZE STREQUAL "")
    set(ADDRESS_SIZE "64")
endif()
if(NOT DEFINED CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "")
    set(CMAKE_BUILD_TYPE "Release")
endif()
if(NOT DEFINED RELEASE_CRASH_REPORTING OR RELEASE_CRASH_REPORTING STREQUAL "")
    set(RELEASE_CRASH_REPORTING "OFF")
endif()
if(NOT DEFINED VIEWER_SYMBOL_FILE OR VIEWER_SYMBOL_FILE STREQUAL "")
    set(VIEWER_SYMBOL_FILE "\"\"")
endif()
if(NOT DEFINED RELEASE_CRASH_REPORTING OR RELEASE_CRASH_REPORTING STREQUAL "")
    set(RELEASE_CRASH_REPORTING "ON")
endif()
if(NOT DEFINED BUGSPLAT_DB OR BUGSPLAT_DB STREQUAL "")
    set(BUGSPLAT_DB "https://i.let-us.cyou/hg/crashraport.php")
endif()
if(NOT DEFINED FETCHCONTENT_BASE_DIR OR FETCHCONTENT_BASE_DIR STREQUAL "")
    set(FETCHCONTENT_BASE_DIR "${CMAKE_BINARY_DIR}/_deps")
endif()
set(VENV_PATH "" CACHE PATH "Path to the Python virtual environment if required")
if(VENV_PATH AND EXISTS "${VENV_PATH}/bin/activate")
    message(STATUS "Using Python virtual environment at: ${VENV_PATH}")
    set(ENV{VIRTUAL_ENV} "${VENV_PATH}")
    set(ENV{PATH} "${VENV_PATH}/bin:$ENV{PATH}")
    execute_process(
            COMMAND ${VENV_PATH}/bin/python -c "import sys; print('python{}.{}'.format(*sys.version_info[:2]))"
            OUTPUT_VARIABLE python_version
            OUTPUT_STRIP_TRAILING_WHITESPACE
    )
    set(ENV{PYTHONPATH} "${VENV_PATH}/lib/${python_version}/site-packages:$ENV{PYTHONPATH}")
    find_package(Python3 REQUIRED)
    set(Python3_EXECUTABLE "${VENV_PATH}/bin/python")
else()
    message(STATUS "No valid virtual environment specified or found.")
endif()
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_compile_options(-Og -fsanitize=address)
    add_link_options(-fsanitize=address)
endif()
add_subdirectory(indra)
add_custom_target(copy_ca_bundle ALL
        COMMAND ${CMAKE_COMMAND} -E copy
        "${CMAKE_BINARY_DIR}/indra/newview/packaged/bin/ca-bundle.crt"
        "${CMAKE_BINARY_DIR}/indra/newview/ca-bundle.crt"
        COMMENT "Copying ca-bundle.crt post-build"
        VERBATIM
)

add_dependencies(copy_ca_bundle copy_l_viewer_manifest)
